--- a/package.json
+++ b/package.json
@@ -7,6 +7,6 @@
     "typescript": "^2.6.2"
   },
   "scripts": {
-    "postinstall": "tsc"
+    "postinstall": "node node_modules/typescript/bin/tsc"
   }
 }
