--- a/package.json
+++ b/package.json
@@ -1,12 +1,22 @@
 {
   "name": "oauth-azure-function",
   "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
+  "private": true,
   "dependencies": {
-    "typescript": "^2.6.2"
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "@types/jest": "^21.1.8",
+    "@types/node": "^8.0.53",
+    "@types/react": "^16.0.25",
+    "@types/react-dom": "^16.0.3",
+    "react-scripts-ts": "2.8.0"
   },
   "scripts": {
-    "postinstall": "node node_modules/typescript/bin/tsc"
+    "postinstall": "npm run server:build && npm run client:build && npm run client:install",
+    "server:build": "node node_modules/typescript/bin/tsc -p tsconfig.server.json",
+    "client:build": "node node_modules/react-scripts-ts/bin/react-scripts-ts.js build",
+    "client:install": "echo TODO: Copy to Azure Blob Container",
+    "dev:start": "react-scripts-ts start",
+    "dev:test": "react-scripts-ts test --env=jsdom"
   }
 }
